[package]
name = "rust_os"
version = "0.0.1"
edition = "2018"
author = ["Douglas Peterson"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

